--- a/index.html
+++ b/index.html
@@ -1,5 +1,54 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <title>helium1680.github.io</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" type="image/png" href="image/icon.png">
+</head>
 <body>
-<p>Hello</p>
+<header>
+    <h1>helium1680.github.io</h1>
+    <nav class="gnav">
+        <ul class="menu">
+            <li>
+                <a href="#links">テスト1</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <h1 class="links">各種リンク</h1>    
+    <ui>
+            <li class="sns"><a href="https://twitter.com/Si_helium">
+                <img src="image/icon/x.png">
+                X(旧Twitter): @Si_helium
+            </a></li>
+            <li class="sns"><a href="https://bsky.app/profile/helium1680.bsky.social">
+                <img src="image/icon/bluesky.png">
+                Bluesky: @helium1680.bsky.social
+            </a></li>
+            <li class="sns"><a href="https://youtube.com/@helium_balloon">
+                <img src="image/icon/youtube.png">
+                Youtube: @helium_balloon
+            </a></li>
+            <li class="sns">
+                <img src="image/icon/discord.png">
+                &nbsp;Discord: heriumu
+            </li>
+            <li class="sns">
+                <img src="image/icon/xbox.png">
+                &nbsp;Xbox: helium1680
+            </li>
+            <li class="sns"><a href="https://scratch.mit.edu/users/helium1234">
+                <img src="image/icon/scratch.png">
+                Scratch: helium1234
+            </a></li>
+            <li class="sns"><a href="https://note.com/si_helium">
+                <img src="image/icon/note.png">
+                Note: si_helium
+            </a></li>
+    </ui>
+    <p>こんにちは！</p>
+</main>
 </body>
 </html>
