--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <main>
     <h1 class="links">各種リンク</h1>    
     <ui>
-            <li class="sns"><a href="https://twitter.com/Si_helium">
+            <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://twitter.com/Si_helium">
                 <img src="image/icon/x.png">
                 X(旧Twitter): @Si_helium
             </a></li>
-            <li class="sns"><a href="https://bsky.app/profile/helium1680.bsky.social">
+            <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://bsky.app/profile/helium1680.bsky.social">
                 <img src="image/icon/bluesky.png">
                 Bluesky: @helium1680.bsky.social
             </a></li>
-            <li class="sns"><a href="https://youtube.com/@helium_balloon">
+            <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://youtube.com/@helium_balloon">
                 <img src="image/icon/youtube.png">
                 Youtube: @helium_balloon
             </a></li>
@@ -39,11 +39,11 @@
                 <img src="image/icon/xbox.png">
                 &nbsp;Xbox: helium1680
             </li>
-            <li class="sns"><a href="https://scratch.mit.edu/users/helium1234">
+            <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://scratch.mit.edu/users/helium1234">
                 <img src="image/icon/scratch.png">
                 Scratch: helium1234
             </a></li>
-            <li class="sns"><a href="https://note.com/si_helium">
+            <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://note.com/si_helium">
                 <img src="image/icon/note.png">
                 Note: si_helium
             </a></li>
