--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <main>
     <h1 class="links">各種リンク</h1>    
     <ui>
-            <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://twitter.com/42helium">
+            <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://twitter.com/ninohelium">
                 <img src="image/icon/x.png">
-                X(旧Twitter): @42helium
+                X(旧Twitter): @ninohelium
             </a></li>
             <li class="sns"><a target="_blank" rel=”noopener noreferrer” href="https://bsky.app/profile/helium1680.bsky.social">
                 <img src="image/icon/bluesky.png">
